[package]
name = "abserde"
description = "Simple platform-agnostic Rust crate for managing application settings/preferences."
version = "0.1.0"
edition = "2021"
authors = ["Simon Allen <simon@simonallen.org>"]
license = "MIT"
homepage = "https://github.com/garfunkel/abserde"
repository = "https://github.com/garfunkel/abserde"

[dependencies]
dirs = "4.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = {version = "1.0.82", optional = true}
serde_yaml = {version = "0.9.2", optional = true}
serde-pickle = {version = "1.1.1", optional = true}
serde_ini = {version = "0.2.0", optional = true}
toml = {version = "0.5.9", optional = true}

[dev-dependencies]
fake = {version = "2.5.0", features = ["derive"]}
serde_json = {version = "1.0.82", features = ["float_roundtrip"]}

[features]
default = ["json"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
pickle = ["dep:serde-pickle"]
ini = ["dep:serde_ini"]
toml = ["dep:toml"]
